setup mode: clarify that it now requests an IP via DHCP

--- a/package/gluon-setup-mode/Makefile
+++ b/package/gluon-setup-mode/Makefile
@@ -9,12 +9,12 @@ PKG_VERSION:=1
 include ../gluon.mk
 
 define Package/gluon-setup-mode
-  TITLE:=Setup mode
+  TITLE:=Modified setup mode that requests an IP via DHCP
   DEPENDS:=+gluon-core +gluon-lock-password +ubus +dnsmasq
 endef
 
 define Package/gluon-setup-mode/description
-	Offline mode to perform basic setup in a secure manner.
+	Offline mode to perform basic setup.
 endef
 
 $(eval $(call BuildPackageGluon,gluon-setup-mode))
